--- a/infra/db/docker-compose.yaml
+++ b/infra/db/docker-compose.yaml
@@ -20,6 +20,19 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - app-network
+      
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    networks:
+      - app-network
+    depends_on:
+      - db
 
 networks:
   app-network:
