--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -17,6 +17,15 @@ server {
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
 
+    # Keycloak static resources
+    location /resources/ {
+        proxy_pass http://keycloak:8080/resources/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Keycloak routes - handle all /keycloak/* requests
     location /keycloak/ {
         proxy_pass http://keycloak:8080/;
