--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -17,19 +17,9 @@ server {
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
 
-    # Keycloak static resources
-    location /resources/ {
-        proxy_pass http://keycloak:8080/resources/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Keycloak routes - handle all /keycloak/* requests
     location /keycloak/ {
-        proxy_pass http://keycloak:8080/;
-        
+        proxy_pass http://keycloak:8080/keycloak/;
+
         # Essential headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -37,19 +27,17 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Forwarded-Prefix /keycloak;
-        
+
         # Keycloak buffer settings
         proxy_buffer_size 128k;
         proxy_buffers 4 256k;
         proxy_busy_buffers_size 256k;
-        
-        # Development timeouts (longer for debugging)
+
+        # Development timeouts
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
-        
+
         # WebSocket support for Keycloak admin console
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -63,10 +51,10 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
+
         # Add authentication headers passthrough
         proxy_set_header Authorization $http_authorization;
-        
+
         # API timeouts
         proxy_connect_timeout 30s;
         proxy_send_timeout 30s;
@@ -80,7 +68,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
+
         # Pass through auth headers
         proxy_set_header Authorization $http_authorization;
     }
@@ -89,7 +77,7 @@ server {
     location /_next/static/ {
         proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
-        
+
         # Caching for static assets (adjust for development vs production)
         add_header Cache-Control "public, max-age=3600"; # 1 hour for dev
         # For production, use: "public, max-age=31536000, immutable"
@@ -118,7 +106,7 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
         proxy_cache_bypass $http_upgrade;
-        
+
         # Development timeouts
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
@@ -145,10 +133,9 @@ server {
     #     proxy_set_header X-Forwarded-Proto $scheme;
     #     proxy_set_header Authorization $http_authorization;
     # }
-
-    # Obfuscated admin routes (change these tokens for production!)
-    # Example: /admin/db-a1b2c3d4e5f6/
-    location /admin/db-a1b2c3d4e5f6/ {
+    # Obfuscated pgadmin routes (change these tokens for production!)
+    # Example: /pgadmin/db-a1b2c3d4e5f6/
+    location /pgadmin/db-a1b2c3d4e5f6/ {
         # Optional: IP whitelist for extra security
         # allow 192.168.1.0/24;   # Your office network
         # allow 10.0.0.0/8;       # VPN range
