--- a/infra/sso/docker-compose.yaml
+++ b/infra/sso/docker-compose.yaml
@@ -10,15 +10,10 @@ services:
       KC_DB_USERNAME: postgres
       KC_DB_PASSWORD: yourpassword
       KC_HTTP_ENABLED: "true"
-      KC_HOSTNAME_URL: "http://localhost:8080/keycloak" # Change in Production
+      KC_HTTP_RELATIVE_PATH: /keycloak
       KC_PROXY: edge
-      KC_PROXY_HEADERS: forwarded
-
-      # Additional production settings
-      # KC_HEALTH_ENABLED: "true"
-      # KC_METRICS_ENABLED: "true"
-      # KC_LOG_LEVEL: INFO  # Add for production
-    command: start-dev # Change to 'start' for production
+      KC_HOSTNAME: "http://localhost:8080/keycloak"
+    command: start-dev
 
 networks:
   app-network:
