--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -13,7 +13,7 @@ server {
     error_log /var/log/nginx/error.log;
 
     # Security headers
-    add_header X-Frame-Options DENY;
+    # add_header X-Frame-Options DENY;
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
 
@@ -153,8 +153,8 @@ server {
 
         # Handle pgAdmin's redirect issues
         proxy_redirect off;
-        proxy_set_header X-Script-Name /admin/db-a1b2c3d4e5f6;
-        proxy_set_header X-Forwarded-Prefix /admin/db-a1b2c3d4e5f6;
+        proxy_set_header X-Script-Name /pgadmin/db-a1b2c3d4e5f6;
+        proxy_set_header X-Forwarded-Prefix /pgadmin/db-a1b2c3d4e5f6;
     }
 
     # Health check endpoint
