--- a/infra/sso/docker-compose.yaml
+++ b/infra/sso/docker-compose.yaml
@@ -13,7 +13,11 @@ services:
       KC_HTTP_RELATIVE_PATH: /keycloak
       KC_PROXY: edge
       KC_HOSTNAME: "http://localhost:8080/keycloak"
+      KC_HOSTNAME_ADMIN_URL: "http://localhost:8080/keycloak"
+      
     command: start-dev
+    networks:
+      - app-network
 
 networks:
   app-network:
