--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -61,6 +61,50 @@ server {
         proxy_read_timeout 60s; # Longer for complex operations
     }
 
+    # Project Core API - INTERNAL ACCESS ONLY
+    # This route is NOT exposed to external clients
+    # Only accessible from within the docker network
+    # Used by other services (professional-tracker, etc.)
+    location ~ ^/internal/projects/ {
+        # Block external access - only allow internal docker network
+        allow 172.16.0.0/12;  # Docker internal networks
+        allow 10.0.0.0/8;     # Docker internal networks  
+        allow 192.168.0.0/16; # Docker internal networks
+        deny all;
+
+        proxy_pass http://project-core:8001/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Pass through auth headers for service-to-service communication
+        proxy_set_header Authorization $http_authorization;
+        proxy_set_header X-User-ID $http_x_user_id;
+
+        # Internal API timeouts
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 60s;
+    }
+
+    # Professional Tracker API
+    location /api/professional/ {
+        proxy_pass http://professional-tracker:8002/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Pass through auth headers
+        proxy_set_header Authorization $http_authorization;
+
+        # API timeouts
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 60s; # Longer for complex operations
+    }
+
     # Next.js API routes (catch remaining /api/* before frontend)
     location /api/ {
         proxy_pass http://frontend:3000;
@@ -114,9 +158,10 @@ server {
     }
 
     # Future services (ready for when you add them)
+
     # Finance Service API
     # location /api/finance/ {
-    #     proxy_pass http://finance-service:8001/;
+    #     proxy_pass http://finance-service:8003/;
     #     proxy_set_header Host $host;
     #     proxy_set_header X-Real-IP $remote_addr;
     #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -126,13 +171,14 @@ server {
 
     # Calendar Service API
     # location /api/calendar/ {
-    #     proxy_pass http://calendar-service:8002/;
+    #     proxy_pass http://calendar-service:8004/;
     #     proxy_set_header Host $host;
     #     proxy_set_header X-Real-IP $remote_addr;
     #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     #     proxy_set_header X-Forwarded-Proto $scheme;
     #     proxy_set_header Authorization $http_authorization;
     # }
+
     # Obfuscated pgadmin routes (change these tokens for production!)
     # Example: /pgadmin/db-a1b2c3d4e5f6/
     location /pgadmin/db-a1b2c3d4e5f6/ {
