--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -65,28 +65,26 @@ server {
     # This route is NOT exposed to external clients
     # Only accessible from within the docker network
     # Used by other services (professional-tracker, etc.)
-    location ~ ^/internal/projects/ {
-        # Block external access - only allow internal docker network
-        allow 172.16.0.0/12;  # Docker internal networks
-        allow 10.0.0.0/8;     # Docker internal networks  
-        allow 192.168.0.0/16; # Docker internal networks
+    location /internal/projects/ {
+        allow 172.16.0.0/12;
+        allow 10.0.0.0/8;
+        allow 192.168.0.0/16;
         deny all;
 
-        proxy_pass http://project-core:8001/api/;
+        proxy_pass http://project-core:8001;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        # Pass through auth headers for service-to-service communication
         proxy_set_header Authorization $http_authorization;
         proxy_set_header X-User-ID $http_x_user_id;
 
-        # Internal API timeouts
         proxy_connect_timeout 30s;
         proxy_send_timeout 30s;
         proxy_read_timeout 60s;
     }
+
 
     # Professional Tracker API
     location /api/professional/ {
