login and project

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -71,7 +71,7 @@ server {
         allow 192.168.0.0/16;
         deny all;
 
-        proxy_pass http://project-core:8001;
+        proxy_pass http://project-core:8001/;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
