--- a/infra/sso/docker-compose.yaml
+++ b/infra/sso/docker-compose.yaml
@@ -14,7 +14,11 @@ services:
       KC_PROXY: edge
       KC_HOSTNAME: "http://localhost:8080/keycloak"
       KC_HOSTNAME_ADMIN_URL: "http://localhost:8080/keycloak"
-      
+      KC_THEME_CACHE_THEMES: false
+      KC_THEME_CACHE_TEMPLATES: false
+
+    volumes:
+      - ./sso/keycloak-themes:/opt/keycloak/themes
     command: start-dev
     networks:
       - app-network
